worked on ride board layout

--- a/client/rideinfo.html
+++ b/client/rideinfo.html
@@ -3,7 +3,7 @@
 	<h1>Rides to Brandeis</h1>
 	<table class="table table-striped">
 		<thead>
-			<tr><th>Who</th><th>Where</th></tr>
+			<tr><th>Location</th><th>Status</th><th>Who</th><th>When</th></tr>
 		</thead>
 		<tbody>
 			{{#each rideto}}
@@ -18,7 +18,7 @@
 	<h1>Rides from Brandeis</h1>
 	<table class="table table-striped">
 		<thead>
-			<tr><th>Who</th><th>Where</th></tr>
+			<tr><th>Location</th><th>Status</th><th>Who</th><th>When</th></tr>
 		</thead>
 		<tbody>
 			{{#each ridefrom}}
@@ -33,8 +33,10 @@
 
 <template name="ridetorow">
 	<tr>
-		<td>{{who}}</td>
 		<td>{{location}}</td>
+		<td>{{status1}}</td>
+		<td>{{who}}</td>
 		<td>{{when}}</td>
+		<td>   <span class="glyphicon glyphicon-remove delride" aria-hidden="true"></span> </td>
 	</tr>
 </template>
