--- a/client/about.html
+++ b/client/about.html
@@ -7,11 +7,11 @@
 		
 	</p>
 </div>
-<h2>Person 1</h2>
+<h2>Zhongqi Li</h2>
 <p>
 	Bio for person one goes here 
 </p>
-<h2>Person 2</h2>
+<h2>Tim Hickey</h2>
 <p>
 	Bio for person 2 goes here 
 </p>
