--- a/client/infoform.html
+++ b/client/infoform.html
@@ -4,6 +4,7 @@
 		<input type="radio" name="status" value="driver"> I have a car ....
 		<input type="radio" name="status" value="rider"> I need a ride<br>
 		<br>
+		My car has <input type="text" name="carSpace"> space, and <br>
 		<input type="radio" name="direction" value="to"> I'm going to Brandeis soon<br>
 		and I'm starting at <input type="text" name="origin"><br>
 		<br>
