--- a/client/rideinfo.html
+++ b/client/rideinfo.html
@@ -3,7 +3,7 @@
 	<h1>Rides to Brandeis</h1>
 	<table class="table table-striped">
 		<thead>
-			<tr><th>Location</th><th>Status</th><th>Who</th><th>When</th></tr>
+			<tr><th>Location</th><th>Status</th><th>Who</th><th>When</th><th>Request</th><th>Call</th><th>Cancel</th></tr>
 		</thead>
 		<tbody>
 			{{#each rideto}}
@@ -18,7 +18,7 @@
 	<h1>Rides from Brandeis</h1>
 	<table class="table table-striped">
 		<thead>
-			<tr><th>Location</th><th>Status</th><th>Who</th><th>When</th></tr>
+			<tr><th>Location</th><th>Status</th><th>Who</th><th>When</th><th>Request</th><th>Call</th><th>Cancel</th></tr>
 		</thead>
 		<tbody>
 			{{#each ridefrom}}
@@ -37,9 +37,20 @@
 		<td>{{status1}}</td>
 		<td>{{who}}</td>
 		<td>{{when}}</td>
+		{{#if match}}
+		<td>
+			<span class="glyphicon glyphicon-send request" aria-hidden="true"></span>
+		</td>
+		<td>
+			<span class="glyphicon glyphicon-earphone call" aria-hidden="true"></span>
+		</td>
+		{{else}}
+		<td></td>
+		<td></td>
+		{{/if}}
 		<td> {{#if delete}} 
 				<span class="glyphicon glyphicon-remove delride" aria-hidden="true"></span> 
 			 {{/if}} 
-		 </td>
+		</td>
 	</tr>
 </template>
