--- a/client/map.html
+++ b/client/map.html
@@ -1,7 +1,7 @@
 <template name="map">
-  {{#if shouldShowMap}}
   <body>
-  <div class="map-container" id="soso">
+    {{#if shouldShowMap}}
+  <div class="map-container" id="map-canvas">
     {{#unless geolocationError}}
       <input id="pac-input" class="controls" type="text" placeholder="Search Box">
       {{> googleMap name="map" options=mapOptions}}
@@ -9,10 +9,42 @@
       Geolocation failed: {{geolocationError}}
     {{/unless}}
   </div>
-  </body>
+
+    <div class="container" id="circle-menu">
+      <div class="row">
+          <div class="col-md-4 col-md-offset-4">
+            <div class="material-button-anim">
+              <ul class="list-inline" id="options">
+                <li class="option">
+                  <button class="material-button option1" type="button">
+                    <span class="fa fa-phone" aria-hidden="true"></span>
+                  </button>
+                </li>
+                <li class="option">
+                  <button class="material-button option2" type="button">
+                    <span class="fa fa-envelope-o" aria-hidden="true"></span>
+                  </button>
+                </li>
+                <li class="option">
+                  <button class="material-button option3" type="button">
+                    <span class="fa fa-pencil" aria-hidden="true"></span>
+                  </button>
+                </li>
+              </ul>
+              <button class="material-button material-button-toggle" type="button">
+                <span class="fa fa-plus" aria-hidden="true"></span>
+              </button>
+            </div>
+          </div>
+      </div>
+    </div>
+
+  {{/if}}
+  <!--
   {{> statusinfo}}
 	{{> requestinfo}}
 	
 	{{> rideinfo}}
-  {{/if}}
+  -->
+  </body>
 </template>
