--- a/client/about.html
+++ b/client/about.html
@@ -9,30 +9,23 @@
 
   {{#ionView}}
     {{#ionContent}}
-	<div class="jumbotron">
+	<div class="text-center">
 		<h1>About the App</h1>
 		<p>
-			Say something about the app.
+			This is a carpool app designed only for Brandeis Students.
 			
 		</p>
-	</div>
+	
 	<h2>Zhongqi Li</h2>
 	<p>
-		Bio for person one goes here 
+		A computer science majored graduate student from Brandeis University.
 	</p>
 	<h2>Tim Hickey</h2>
 	<p>
 		Bio for person 2 goes here 
 	</p>
-	<h2>Person 3</h2>
-	<p>
-		Bio for person 3 goes here 
-	</p>
-	<h2>Person 4</h2>
-	<p>
-		Bio for person 4 goes here 
-	</p>
 	etc.
+	</div>
 	{{/ionContent}}
   {{/ionView}}
 </template>
