--- a/client/map.html
+++ b/client/map.html
@@ -12,8 +12,11 @@
 
   {{#contentFor "headerTitle"}}
     <h1 class="title">Map View</h1>
-   <!-- <button class="button button-clear pull-right" data-ion-menu-toggle="right">-->
-    <button class="button button-clear pull-right" data-ion-modal="tripinfo">
+  {{/contentFor}}
+
+  {{#contentFor "headerButtonRight"}}
+   <button class="button button-clear pull-right" id="trip-popover">
+    <!--<button class="button button-clear pull-right" id="trip-modal">-->
       {{#if isAndroid}}
             {{> ionIcon icon='android-people'}}
       {{else}}
@@ -34,39 +37,8 @@
     {{/unless}}
   </div>
 
-<!--
-    <div class="container" id="circle-menu">
-      <div class="row">
-          <div class="col-md-4 col-md-offset-4">
-            <div class="material-button-anim">
-              <ul class="list-inline" id="options">
-                <li class="option">
-                  <button class="material-button option1" type="button">
-                    <span class="fa fa-phone" aria-hidden="true"></span>
-                  </button>
-                </li>
-                <li class="option">
-                  <button class="material-button option2" type="button">
-                    <span class="fa fa-envelope-o" aria-hidden="true"></span>
-                  </button>
-                </li>
-                <li class="option">
-                  <button class="material-button option3" type="button">
-                    <span class="fa fa-pencil" aria-hidden="true"></span>
-                  </button>
-                </li>
-              </ul>
-              <button class="material-button material-button-toggle" type="button">
-                <span class="fa fa-plus" aria-hidden="true"></span>
-              </button>
-            </div>
-          </div>
-      </div>
-    </div>
-
-  -->
   {{/if}}
-  {{> requestinfo}}
+  <!--{{> requestinfo}}-->
   {{/ionContent}}
   {{/ionView}}
 </template>
