--- a/client/about.html
+++ b/client/about.html
@@ -13,19 +13,24 @@
 	<div class="item item-divider">
 		<h3 class="text-center">About the App</h3>
 	</div>
-	<div class="text-center">
+	<div class="item item-text-wrap">
 		<p>
 			This is a carpool app designed only for Brandeis Students.
-			
+
 		</p>
-	
+	</div>
+
+<div class="item item-text-wrap">
 	<h3>Zhongqi Li</h3>
 	<p>
 		A computer science majored graduate student from Brandeis University.
 	</p>
+</div>
+
+<div class="item item-text-wrap">
 	<h3>Tim Hickey</h3>
 	<p>
-		A Professor of Computer Science from Brandeis University whose current work focuses on educational technology and game-based learning. 
+		A Professor of Computer Science from Brandeis University whose current work focuses on educational technology and game-based learning.
 	</p>
 	etc.
 	</div>
@@ -37,9 +42,10 @@
   	</div>
 	<div class="item item-text-wrap">
 		<small>Copyright (c) 2015 Zhongqi Li, Tim Hickey</small>
+	</div>
 
 
-
+	<div class="item item-text-wrap">
 		<p>
 		Permission is hereby granted, free of charge, to any person obtaining a copy
 		of this software and associated documentation files (the "Software"), to deal
@@ -48,13 +54,16 @@
 		copies of the Software, and to permit persons to whom the Software is
 		furnished to do so, subject to the following conditions:
 		</p>
+	</div>
 
+	<div class="item item-text-wrap">
 		<p>
 		The above copyright notice and this permission notice shall be included in
 		all copies or substantial portions of the Software.
 		</p>
+	</div>
 
-
+	<div class="item item-text-wrap">
 		<p>
 		THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
 		IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
