--- a/client/tripModal.html
+++ b/client/tripModal.html
@@ -32,11 +32,13 @@
 			</li>
     </div>
 			{{else}}
+      <div class="card">
 			  <div class="jumbotron vertical-center">
-			  <div class="text-center">
-			  <h3 class="ion-sad-outline">&nbsp;No Riders To Display</h3>
+			  <div class="item item-text-wrap text-center">
+			  <span class="ion-sad-outline">&nbsp;No Riders To Display</span>
 			  </div>
 			  </div>
+      </div>
 			{{/if}}
     {{/ionPopover}}
 </template>
