--- a/client/infoform.html
+++ b/client/infoform.html
@@ -100,7 +100,7 @@
 
 <template name="done">
   {{#contentFor "headerButtonLeft"}}
-    {{>ionNavBackButton path="where"}}
+    {{>ionNavBackButton path="when"}}
   {{/contentFor}}
 
   {{#contentFor "headerTitle"}}
@@ -109,14 +109,16 @@
 
   {{#ionView}}
     {{#ionContent}}
+    <div class="card">
     <div class="jumbotron vertical-center">
-    <div class="text-center">
+    <div class="item item-text-wrap text-center">
     <h1 class="ion-happy-outline">&nbsp;Thank you for completing the information!</h1>
     {{#if isDriver}}
     <h3>Now you can find some riders!</h3>
     {{else}}
     <h3>Now you can find some drivers to pick you up!</h3>
     {{/if}}
+    </div>
     </div>
     </div>
       <a class="button button-medium button-positive button-block" href="{{pathFor 'map'}}"><span class="ion-ios-paperplane"></span>&nbsp;{{#if isDriver}}Find Riders{{else}}Find Drivers{{/if}}</a>
