added phone validation

--- a/client/infoModal.html
+++ b/client/infoModal.html
@@ -10,13 +10,13 @@
     <ul class="list">
     <li class="item">
       <span class="ion-person">&nbsp;Name:</span>
-      <div class="pull-right"> 
+      <div class="pull-right">
       {{personInfo.name}}
       </div>
     </li>
     <li class="item">
-      <span class="ion-location">&nbsp;Go To:</span> 
-      <div class="pull-right"> 
+      <span class="ion-location">&nbsp;Go To:</span>
+      <div class="pull-right">
       {{personInfo.go}}
       </div>
     </li>
@@ -44,7 +44,7 @@
 	  {{/if}}
     {{#if toBrandeis}}
     {{else}}
-    <a class="button button-stable" name="dest" id="dest"><span class="ion-ios-marker">&nbsp;See Destination</span></a>
+    <!--<a class="button button-stable" name="dest" id="dest"><span class="ion-ios-marker">&nbsp;See Destination</span></a>-->
     {{/if}}
 	</div>
 	{{/if}}
