cleaned redundant code

--- a/client/infoModal.html
+++ b/client/infoModal.html
@@ -53,8 +53,8 @@
 
 <template name="self">
   <div class="jumbotron vertical-center">
-  <div class="text-center">
-  <h3 class="ion-happy-outline">&nbsp;This is yourself</h3>
+  <div class="item item-text-wrap text-center">
+  <span class="ion-happy-outline">&nbsp;This is yourself</span>
   </div>
   </div>
 </template>
